Fixed Button Colors On Mobile Devices + Fixed About Section Link in Contact Us Section

--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -180,3 +180,7 @@
     width: 100%;
     position: absolute;
 }
+
+button {
+    color: black;
+}
