--- a/styles/sass/partials/_contact-us.scss
+++ b/styles/sass/partials/_contact-us.scss
@@ -94,3 +94,7 @@
     width: 100%;
     position: absolute;
 }
+
+button {
+    color: black;
+}
